fix: css - step buttons was not completely visible on default window size

--- a/src/client/player.css
+++ b/src/client/player.css
@@ -6,41 +6,42 @@
 
 .select-file {
   width: 100%;
-  height: 50px;
+  height: 6vh;
   background-color: #212121;
   color: #fff;
   font-size: 20px;
   text-align: center;
-  line-height: 50px;
+  line-height: 6vh;
   cursor: pointer;
 }
 
 .continue-button {
   width: 100%;
-  height: 50px;
+  height: 6vh;
+  margin-top: 2px;
   background-color: #272727;
   color: #fff;
   font-size: 20px;
   text-align: center;
-  line-height: 50px;
+  line-height: 6vh;
   cursor: pointer;
 }
 
 .steps {
     display: flex;
     align-items: center;
-    margin-top: 10px;
+    margin-top: 5px;
 }
 
 .step-button {
   width: 50px;
   margin-right: 30px;
-  height: 50px;
+  height: 6vh;
   background-color: #272727;
   color: #fff;
   font-size: 20px;
   text-align: center;
-  line-height: 50px;
+  line-height: 6vh;
   cursor: pointer;
 }
 
